@@ -29,7 +29,7 @@ context "The PersonController" do
   end
   
   specify "should render 'person/create' on GET to create" do
-    controller.should_render :template => "person/create"
+    controller.should_render :create
     get 'create'
   end
   
@@ -73,7 +73,7 @@ context "When requesting /person with controller isolated from views" do
   end
 
   specify "the response should render 'list'" do
-    controller.should_render :template => "person/list"
+    controller.should_render :list
   end
 
   specify "should find all people on GET to index" do
@@ -96,12 +96,12 @@ context "When requesting /person with views integrated" do
   end
   
   specify "the response should render 'list'" do
-    controller.should_render :template => "person/list"
+    controller.should_render :list
   end
 
   specify "the response should not render 'index'" do
     lambda {
-      controller.should_render :template => "person/index"
+      controller.should_render :index
     }.should_raise
   end
 
