@@ -18,18 +18,38 @@ require File.dirname(__FILE__) + '/../spec_helper'
       controller.should_render :template => 'render_spec/some_action'
     end
 
+    specify "you should be able to use a symbol before a post to an action" do
+      controller.should_render :some_action
+      post 'some_action'
+    end
+
+    specify "you should be able to use a symbol after a post to an action" do
+      post 'some_action'
+      controller.should_render :some_action
+    end
+
+    specify "you should be able to use a String before a post to an action" do
+      controller.should_render 'some_action'
+      post 'some_action'
+    end
+
+    specify "you should be able to use a symbol after a post to an action" do
+      post 'some_action'
+      controller.should_render 'some_action'
+    end
+
     specify "a 'should_render' expectation should fail if placed before an action that renders something different" do
       controller.should_render :template => 'non_existent_template'
       lambda do
         post 'some_action'
-      end.should_fail_with "{:template=>\"non_existent_template\"} should == {:template=>\"render_spec/some_action\"}"
+      end.should_fail_with "{:template=>\"render_spec/some_action\"} should == {:template=>\"non_existent_template\"}"
     end
 
     specify "a 'should_render' expectation should fail if placed after an action that renders something different" do
       post 'some_action'
       lambda do
         controller.should_render :template => 'non_existent_template'
-      end.should_fail_with "{:template=>\"non_existent_template\"} should == {:template=>\"render_spec/some_action\"}"
+      end.should_fail_with "{:template=>\"render_spec/some_action\"} should == {:template=>\"non_existent_template\"}"
     end
 
     specify "a 'should_render' expectation should support :text after the action" do
@@ -43,3 +63,7 @@ require File.dirname(__FILE__) + '/../spec_helper'
     end
   end
 end
+
+
+
+
